group = 'com.nablarch.framework'
version = '1.0.1'
description = 'コード機能のJDBC実装'

buildscript {
  repositories {
    mavenLocal()
    maven { url "${developLibUrl}" }
    jcenter()
  }
  dependencies {
    classpath "com.nablarch.dev:nablarch-gradle-plugin:${nablarchGradlePluginVersion}"
    classpath "net.saliman:gradle-cobertura-plugin:${coberturaPluginVersion}"
  }
}
apply plugin: 'com.nablarch.dev.nablarch-build'
apply plugin: 'com.nablarch.dev.nablarch-maven-deploy'
apply plugin: 'com.nablarch.dev.nablarch-sonarqube'
apply plugin: 'com.nablarch.dev.nablarch-version'
apply plugin: 'cobertura'
apply from: 'https://github.com/nablarch/nablarch-gradle-plugin/blob/develop/scripts/cobertura/cobertura-0.0.1.gradle?raw=true'

// ビルド時のJavaのバージョンを指定
sourceCompatibility=JavaVersion.VERSION_1_6
targetCompatibility=JavaVersion.VERSION_1_6

dependencies {
  compile "com.nablarch.framework:nablarch-common-code:${nablarchCommonCodeVersion}"
  compile "com.nablarch.framework:nablarch-common-jdbc:${nablarchCommonJdbcVersion}"

  testCompile "com.nablarch.framework:nablarch-core-repository:${nablarchCoreRepositoryVersion}"
  testCompile 'junit:junit:4.12'

  testRuntime 'org.slf4j:slf4j-nop:1.7.12' // for cobertura
}

test {

  jvmArgs (
          '-XX:PermSize=32m',
          '-Dfile.encoding=UTF-8',
          '-XX:-UseSplitVerifier'
  )

  

}

tasks.sonarRunner {
  dependsOn = ['coverage']
}

task wrapper(type: Wrapper) {
  gradleVersion = '2.13'
}

